--- a/nuxeo-dsl-core/src/main/resources/js/package.json
+++ b/nuxeo-dsl-core/src/main/resources/js/package.json
@@ -13,7 +13,17 @@
     },
     "devDependencies": {
         "chai": "^4.1.2",
-        "gulp": "^4.0.0",
+        "gulp": "3.9.1",
+        "gulp-babel": "6.1.2",
+        "gulp-if": "2.0.0",
+        "gulp-inject": "4.0.0",
+        "gulp-mocha": "^5.0.0",
+        "gulp-rename": "1.2.2",
+        "gulp-rev": "7.0.0",
+        "gulp-rev-replace": "0.4.3",
+        "gulp-sourcemaps": "1.6.0",
+        "gulp-uglify": "1.5.3",
+        "gulp-useref": "3.1.0",
         "mocha": "^3.5.3"
     },
     "private": true
