--- a/nuxeo-dsl-core/src/main/resources/js/package.json
+++ b/nuxeo-dsl-core/src/main/resources/js/package.json
@@ -12,19 +12,25 @@
         "nashorn-babel-polyfill": "^0.2.7"
     },
     "devDependencies": {
+        "babel-preset-env": "^1.6.1",
+        "babel-preset-es2015": "^6.23.0",
         "chai": "^4.1.2",
         "gulp": "3.9.1",
-        "gulp-babel": "6.1.2",
+        "gulp-babel": "^7.0.0",
+        "gulp-concat": "^2.6.1",
         "gulp-if": "2.0.0",
         "gulp-inject": "4.0.0",
+        "gulp-load-plugins": "^1.1.0",
         "gulp-mocha": "^5.0.0",
+        "gulp-print": "^2.0.1",
         "gulp-rename": "1.2.2",
         "gulp-rev": "7.0.0",
         "gulp-rev-replace": "0.4.3",
         "gulp-sourcemaps": "1.6.0",
         "gulp-uglify": "1.5.3",
         "gulp-useref": "3.1.0",
-        "mocha": "^3.5.3"
+        "mocha": "^3.5.3",
+        "run-sequence": "^2.2.1"
     },
     "private": true
 }
