--- a/nuxeo-dsl-studio/package.json
+++ b/nuxeo-dsl-studio/package.json
@@ -1,15 +1,15 @@
 {
-  "name": "jdl-studio",
-  "version": "0.0.5",
+  "name": "nuxeo-dsl-studio",
+  "version": "0.0.1",
   "private": true,
-  "description": "A UML visual editor for JHipster JDL",
-  "homepage": "http://www.jhipster.tech//jdl-studio/",
-  "author": "Deepu KS <d4udts@gmail.com>",
+  "description": "A UML visual editor for Nuxeo DSL",
+  "homepage": "https://github.com/dmetzler/nuxeo-dsl.git",
+  "author": "Damien Metzler <dmetzler@nuxeo.com>",
   "license": "MIT",
   "keywords": [
     "uml",
-    "jdl",
-    "jhipster"
+    "ndl",
+    "nuxeo"
   ],
   "dependencies": {
     "lodash": "~3.7.0",
@@ -25,6 +25,7 @@
     "gulp-cssnano": "2.1.2",
     "gulp-if": "2.0.0",
     "gulp-inject": "4.0.0",
+    "gulp-print": "^2.0.1",
     "gulp-rename": "1.2.2",
     "gulp-rev": "7.0.0",
     "gulp-rev-replace": "0.4.3",
@@ -34,15 +35,11 @@
     "lazypipe": "1.0.1",
     "main-bower-files": "2.11.1"
   },
-  "scripts": {
-    "prepublish": "gulp build",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
   "directories": {
     "test": "test"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/jhipster/jdl-studio.git"
+    "url": "https://github.com/dmetzler/nuxeo-dsl.git"
   }
 }
