--- a/nuxeo-dsl-core/pom.xml
+++ b/nuxeo-dsl-core/pom.xml
@@ -21,7 +21,7 @@
         <executions>
           <execution>
             <id>grunt-build</id>
-            <phase>process-resources</phase>
+            <phase>generate-resources</phase>
             <configuration>
               <target>
                 <ant antfile="${basedir}/build.xml" dir="${basedir}"></ant>
