--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: java
 jdk:
   - oraclejdk8
-script: "npm installl -g gulp && npm install -g bower && mvn verify"
+script: "npm installl -g gulp-cli && npm install -g bower && mvn verify"
 sudo: false
 cache:
   directories:
