--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,10 @@
 language: java
 jdk:
   - oraclejdk8
-script: "npm installl -g gulp-cli && npm install -g bower && mvn verify"
+before_script:
+  - npm install -g gulp-cli
+  - npm install -g bower
+script: "mvn verify"
 sudo: false
 cache:
   directories:
