--- a/nuxeo-dsl-core/pom.xml
+++ b/nuxeo-dsl-core/pom.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0"?>
-<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xmlns="http://maven.apache.org/POM/4.0.0"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>org.nuxeo.dsl</groupId>
@@ -10,7 +8,7 @@
   </parent>
   <artifactId>nuxeo-dsl-core</artifactId>
   <name>Nuxeo dsl core</name>
-  <description />
+  <description/>
 
 
   <build>
@@ -24,7 +22,7 @@
             <phase>generate-resources</phase>
             <configuration>
               <target>
-                <ant antfile="${basedir}/build.xml" dir="${basedir}"></ant>
+                <ant antfile="${basedir}/build.xml" dir="${basedir}" />
               </target>
             </configuration>
             <goals>
