--- a/nuxeo-dsl-package/pom.xml
+++ b/nuxeo-dsl-package/pom.xml
@@ -29,6 +29,10 @@
       <groupId>org.nuxeo.dsl</groupId>
       <artifactId>nuxeo-dsl-studio</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.nuxeo.dsl</groupId>
+      <artifactId>nuxeo-dsl-rest</artifactId>
+    </dependency>
   </dependencies>
 
   <build>
