--- a/nuxeo-dsl-studio/package.json
+++ b/nuxeo-dsl-studio/package.json
@@ -33,7 +33,8 @@
     "gulp-uglify": "1.5.3",
     "gulp-useref": "3.1.0",
     "lazypipe": "1.0.1",
-    "main-bower-files": "2.11.1"
+    "main-bower-files": "2.11.1",
+    "proxy-middleware": "^0.15.0"
   },
   "directories": {
     "test": "test"
