--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0"?>
-<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xmlns="http://maven.apache.org/POM/4.0.0"
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>org.nuxeo.ecm.distribution</groupId>
@@ -10,14 +12,15 @@
   <groupId>org.nuxeo.dsl</groupId>
   <artifactId>nuxeo-dsl-parent</artifactId>
   <version>1.0-SNAPSHOT</version>
-  <name>Nuxeo dsl parent</name>
-  <description/>
+  <name>Nuxeo DSL :: parent</name>
+  <description />
   <packaging>pom</packaging>
 
   <modules>
     <module>nuxeo-dsl-core</module>
     <module>nuxeo-dsl-studio</module>
     <module>nuxeo-dsl-rest</module>
+    <module>nuxeo-graphql-core</module>
     <module>nuxeo-dsl-package</module>
   </modules>
 
@@ -90,6 +93,21 @@
         <groupId>org.nuxeo.dsl</groupId>
         <artifactId>nuxeo-dsl-rest</artifactId>
         <version>${project.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.nuxeo.dsl</groupId>
+        <artifactId>nuxeo-graphql-core</artifactId>
+        <version>${project.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>com.graphql-java</groupId>
+        <artifactId>graphql-java</artifactId>
+        <version>3.0.0</version>
+      </dependency>
+      <dependency>
+        <groupId>com.graphql-java</groupId>
+        <artifactId>graphql-java-servlet</artifactId>
+        <version>4.0.0</version>
       </dependency>
     </dependencies>
   </dependencyManagement>
