--- a/nuxeo-dsl-core/pom.xml
+++ b/nuxeo-dsl-core/pom.xml
@@ -48,6 +48,10 @@
 
   <dependencies>
     <dependency>
+      <groupId>org.nuxeo.dsl</groupId>
+      <artifactId>nuxeo-graphql-core</artifactId>
+    </dependency>
+    <dependency>
       <groupId>org.nuxeo.runtime</groupId>
       <artifactId>nuxeo-runtime</artifactId>
     </dependency>
