--- a/nuxeo-dsl-studio/pom.xml
+++ b/nuxeo-dsl-studio/pom.xml
@@ -16,29 +16,30 @@
 
   <build>
     <plugins>
-       <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-dependency-plugin</artifactId>
-            <executions>
-                <execution>
-                    <id>unpack</id>
-                    <phase>process-resources</phase>
-                    <goals>
-                        <goal>unpack</goal>
-                    </goals>
-                    <configuration>
-                       <artifactItems>
-                         <artifactItem>
-                            <groupId>org.nuxeo.dsl</groupId>
-                            <artifactId>nuxeo-dsl-core</artifactId>
-                            <outputDirectory>./</outputDirectory>
-                            <includes>js/nuxeo_dsl.js</includes>
-                          </artifactItem>
-                        </artifactItems>
-                    </configuration>
-                </execution>
-            </executions>
-        </plugin>
+        <plugin>
+          <artifactId>maven-resources-plugin</artifactId>
+          <executions>
+              <execution>
+                  <id>copy-cleanup</id>
+                  <phase>generate-resources</phase>
+                  <goals>
+                      <goal>copy-resources</goal>
+                  </goals>
+                  <configuration>
+                      <outputDirectory>.</outputDirectory>
+                      <overwrite>true</overwrite>
+                      <resources>
+                          <resource>
+                              <directory>../nuxeo-dsl-core/target/generated-resources</directory>
+                              <includes>
+                                  <include>js/nuxeo_dsl.js</include>
+                              </includes>
+                          </resource>
+                      </resources>
+                  </configuration>
+              </execution>
+          </executions>
+      </plugin>       
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-antrun-plugin</artifactId>
