--- a/nuxeo-dsl-core/package.json
+++ b/nuxeo-dsl-core/package.json
@@ -15,7 +15,7 @@
         "babel-preset-env": "^1.6.1",
         "babel-preset-es2015": "^6.23.0",
         "chai": "^4.1.2",
-        "gulp": "3.9.1",
+        "gulp": "^4.0.0",
         "gulp-babel": "^7.0.0",
         "gulp-concat": "^2.6.1",
         "gulp-if": "2.0.0",
@@ -29,7 +29,7 @@
         "gulp-sourcemaps": "1.6.0",
         "gulp-uglify": "1.5.3",
         "gulp-useref": "3.1.0",
-        "mocha": "^3.5.3",
+        "mocha": "^5.2.0",
         "run-sequence": "^2.2.1"
     },
     "private": true
