--- a/nuxeo-dsl-studio/package.json
+++ b/nuxeo-dsl-studio/package.json
@@ -18,9 +18,9 @@
   },
   "devDependencies": {
     "babel-preset-es2015": "6.18.0",
-    "browser-sync": "2.12.5",
+    "browser-sync": "^2.26.3",
     "del": "2.2.0",
-    "gulp": "3.9.1",
+    "gulp": "^4.0.0",
     "gulp-babel": "6.1.2",
     "gulp-cssnano": "2.1.2",
     "gulp-if": "2.0.0",
@@ -33,7 +33,7 @@
     "gulp-uglify": "1.5.3",
     "gulp-useref": "3.1.0",
     "lazypipe": "1.0.1",
-    "main-bower-files": "2.11.1",
+    "main-bower-files": "^2.13.1",
     "proxy-middleware": "^0.15.0"
   },
   "directories": {
