--- a/nuxeo-dsl-studio/pom.xml
+++ b/nuxeo-dsl-studio/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <groupId>org.nuxeo.dsl</groupId>
     <artifactId>nuxeo-dsl-parent</artifactId>
-    <version>1.0.1-SNAPSHOT</version>
+    <version>1.0.1</version>
   </parent>
 
   <artifactId>nuxeo-dsl-studio</artifactId>
