--- a/nuxeo-graphql-core/pom.xml
+++ b/nuxeo-graphql-core/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>org.nuxeo.dsl</groupId>
     <artifactId>nuxeo-dsl-parent</artifactId>
-    <version>1.0.1-SNAPSHOT</version>
+    <version>1.0.1</version>
   </parent>
 
 
