--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 
   <groupId>org.nuxeo.dsl</groupId>
   <artifactId>nuxeo-dsl-parent</artifactId>
-  <version>1.0.1-SNAPSHOT</version>
+  <version>1.0.1</version>
   <name>Nuxeo DSL :: parent</name>
   <description></description>
   <packaging>pom</packaging>
