--- a/nuxeo-dsl-core/pom.xml
+++ b/nuxeo-dsl-core/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <groupId>org.nuxeo.dsl</groupId>
     <artifactId>nuxeo-dsl-parent</artifactId>
-    <version>1.0.3-SNAPSHOT</version>
+    <version>1.0.3</version>
   </parent>
   <artifactId>nuxeo-dsl-core</artifactId>
   <name>Nuxeo DSL :: core</name>
