--- a/nuxeo-dsl-core/pom.xml
+++ b/nuxeo-dsl-core/pom.xml
@@ -75,7 +75,7 @@
       <artifactId>guava</artifactId>
     </dependency>
     <dependency>
-      <groupId>dom4j</groupId>
+      <groupId>org.dom4j</groupId>
       <artifactId>dom4j</artifactId>
     </dependency>
   </dependencies>
